rpled-compile/tests/pixelscripts/invalid_method_call.out
Failed to parse pixelscript file: Parse error:
[31mError:[0m Lexical error
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0mtests/pixelscripts\invalid_method_call.pxl:8:8[38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m8 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249ml[0m[38;5;249me[0m[38;5;249md[0m[31m:[0m[38;5;249mc[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m([0m[38;5;249m)[0m
 [38;5;240m  │[0m        [31m┬[0m  
 [38;5;240m  │[0m        [31m╰[0m[31m─[0m[31m─[0m Unexpected character ':'
[38;5;246m───╯[0m
