rpled-compile/tests/pixelscripts/invalid_method_call.pxl
pixelscript = {
    name = "InvalidMethod",
    modules = {"LED"},
    entrypoint = "main"
}

function main()
    led:clear()
end
